# agent-chat

./: .gitignore  README.md  SPEC-v2.md  SPEC.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
agents/: coordinator.md
commands/: chat.md  listen.md
docs/: CLAUDE-WORK-TEMPLATE.md  HANDOFF.md  SETUP.md
hooks/: hooks.json  notify.sh  session_start.py  smart_interrupt.py  stop_check_messages.py  tmux-status.sh  utils.py
scripts/: install.sh
server/: ecosystem.config.js  ircd.yaml.template
skills/: chat.md  listen.md
skills/chat-etiquette/: SKILL.md
skills/coordination-patterns/: SKILL.md
src/agent_chat/: __init__.py  cli.py  client.py  config.py  logging.py  presence.py  state.py  utils.py  words.py
tests/: conftest.py  test_cli.py  test_config.py  test_integration.py  test_state.py
